translated for privacy policy

--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -349,7 +349,35 @@
     },
     "partners": {
       "title": "আমাদের অংশীদার"
-    }
+    },
+    "privacyPolicy": [
+      {
+        "title": "গোপনীয়তা নীতি",
+        "text": "বার্ডস অফ ইডেন-এ, আমরা আপনার গোপনীয়তাকে গুরুত্ব সহকারে নিই। এই গোপনীয়তা নীতিটি ব্যাখ্যা করে যে আপনি যখন আমাদের পরিষেবাগুলি ব্যবহার করেন তখন আমরা কীভাবে আপনার সম্পর্কে তথ্য সংগ্রহ, ব্যবহার এবং প্রকাশ করি। আপনার তথ্য সম্পর্কিত আমাদের অনুশীলনগুলি এবং আমরা কীভাবে এটি পরিচালনা করব তা বোঝার জন্য দয়া করে এই নীতিটি মনোযোগ সহকারে পড়ুন।"
+      },
+      {
+        "title": "আমরা যে তথ্য সংগ্রহ করি",
+        "text": "আপনি যখন আমাদের ওয়েবসাইট পরিদর্শন করেন, আমাদের পরিষেবাগুলি ব্যবহার করেন বা আমাদের সাথে যোগাযোগ করেন তখন আমরা আপনার কাছ থেকে তথ্য সংগ্রহ করি। এই তথ্যের মধ্যে অন্তর্ভুক্ত থাকতে পারে: আপনার নাম, ইমেল ঠিকানা, যোগাযোগের তথ্য এবং অন্য কোনো তথ্য যা আপনি আমাদের প্রদান করেন।"
+      },
+      {
+        "title": "আমরা কীভাবে আপনার তথ্য ব্যবহার করি",
+        "subtitle": "আমরা আপনার কাছ থেকে সংগ্রহ করা তথ্য ব্যবহার করতে পারি:",
+        "list": [
+          "আমাদের পরিষেবাগুলি প্রদান এবং উন্নত করতে।",
+          "আমাদের পরিষেবাগুলি সম্পর্কে আপনার সাথে যোগাযোগ করতে।",
+          "আপনার অভিজ্ঞতা ব্যক্তিগতকৃত করতে।",
+          "আপনার অনুসন্ধানের প্রতিক্রিয়া জানাতে।"
+        ]
+      },
+      {
+        "title": "তথ্য ভাগ করা এবং প্রকাশ করা",
+        "text": "আমরা আপনার ব্যক্তিগত তথ্য বাইরের পক্ষগুলির কাছে বিক্রি, লেনদেন বা অন্যথায় স্থানান্তর করি না। এর মধ্যে বিশ্বস্ত তৃতীয় পক্ষগুলি অন্তর্ভুক্ত নয় যারা আমাদের ওয়েবসাইট পরিচালনা, আমাদের ব্যবসা পরিচালনা বা আপনাকে পরিষেবা প্রদানে সহায়তা করে, যতক্ষণ না সেই পক্ষগুলি এই তথ্য গোপন রাখতে সম্মত হয়।"
+      },
+      {
+        "title": "আমাদের সাথে যোগাযোগ করুন",
+        "text": "এই গোপনীয়তা নীতি সম্পর্কে আপনার কোনো প্রশ্ন থাকলে, আপনি privacy@birdsofeden.com-এ আমাদের সাথে যোগাযোগ করতে পারেন।"
+      }
+    ]
   },
   "services": {
     "bigData": [
