--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -340,7 +340,35 @@
     },
     "partners": {
       "title": "パートナー"
-    }
+    },
+    "privacyPolicy": [
+      {
+        "title": "プライバシーポリシー",
+        "text": "BIRDS OF EDENでは、お客様のプライバシーを真剣に考えています。このプライバシーポリシーは、お客様が当社のサービスを利用する際に、当社がお客様に関する情報をどのように収集、使用、開示するかを説明します。お客様の情報に関する当社の慣行と、当社がお客様の情報をどのように取り扱うかを理解するために、このポリシーを注意深くお読みください。"
+      },
+      {
+        "title": "当社が収集する情報",
+        "text": "お客様が当社のウェブサイトにアクセスしたり、当社のサービスを利用したり、当社と通信したりする際に、当社はお客様から情報を収集します。この情報には、お客様の名前、電子メールアドレス、連絡先情報、およびお客様が当社に提供するその他の情報が含まれる場合があります。"
+      },
+      {
+        "title": "情報の利用方法",
+        "subtitle": "当社は、お客様から収集した情報を以下の目的で使用する場合があります。",
+        "list": [
+          "当社のサービスを提供および改善する。",
+          "当社のサービスについてお客様と通信する。",
+          "お客様の体験をパーソナライズする。",
+          "お客様の問い合わせに対応する。"
+        ]
+      },
+      {
+        "title": "情報の共有と開示",
+        "text": "当社は、お客様の個人情報を外部の第三者に販売、取引、またはその他の方法で譲渡することはありません。ただし、当社のウェブサイトの運営、事業の遂行、またはお客様へのサービス提供を支援する信頼できる第三者は、この情報を機密に保つことに同意する限り、含まれません。"
+      },
+      {
+        "title": "お問い合わせ",
+        "text": "このプライバシーポリシーについてご質問がある場合は、privacy@birdsofeden.comまでお問い合わせください。"
+      }
+    ]
   },
   "services": {
     "bigData": [
