--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -348,7 +348,35 @@
     },
     "partners": {
       "title": "شركاؤنا"
-    }
+    },
+    "privacyPolicy": [
+      {
+        "title": "سياسة الخصوصية",
+        "text": "في BIRDS OF EDEN، نتعامل مع خصوصيتك بجدية. توضح سياسة الخصوصية هذه كيفية جمع واستخدام والكشف عن المعلومات الخاصة بك عند استخدام خدماتنا. يرجى قراءة هذه السياسة بعناية لفهم ممارساتنا فيما يتعلق بمعلوماتك وكيف سنتعامل معها."
+      },
+      {
+        "title": "المعلومات التي نجمعها",
+        "text": "نقوم بجمع معلومات منك عندما تزور موقعنا على الإنترنت، أو تستخدم خدماتنا، أو تتواصل معنا. قد تتضمن هذه المعلومات: اسمك، عنوان بريدك الإلكتروني، معلومات الاتصال، وأي معلومات أخرى تقدمها لنا."
+      },
+      {
+        "title": "كيف نستخدم معلوماتك",
+        "subtitle": "قد نستخدم المعلومات التي نجمعها منك من أجل:",
+        "list": [
+          "تقديم خدماتنا وتحسينها.",
+          "التواصل معك بشأن خدماتنا.",
+          "تخصيص تجربتك.",
+          "الرد على استفساراتك."
+        ]
+      },
+      {
+        "title": "مشاركة المعلومات والإفصاح عنها",
+        "text": "نحن لا نبيع أو نتاجر أو ننقل معلوماتك الشخصية إلى أطراف خارجية. هذا لا يشمل الأطراف الثالثة الموثوقة التي تساعدنا في تشغيل موقعنا على الإنترنت، أو إدارة أعمالنا، أو خدمتك، طالما أن تلك الأطراف توافق على الحفاظ على سرية هذه المعلومات."
+      },
+      {
+        "title": "اتصل بنا",
+        "text": "إذا كان لديك أي أسئلة حول سياسة الخصوصية هذه، يمكنك الاتصال بنا على privacy@birdsofeden.com."
+      }
+    ]
   },
   "services": {
     "bigData": [
