translation for hardware

--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -799,5 +799,46 @@
     ],
     "descriptionTitle": "বিবরণ",
     "viewPortfolio": "পোর্টফোলিও দেখুন"
+  },
+  "hardwareProducts": {
+    "premiumTech": {
+      "title": "প্রিমিয়াম টেক অ্যাক্সেসরিজ",
+      "description": "উচ্চ-মানের, পেশাদার-গ্রেডের টেক অ্যাক্সেসরিজ দিয়ে আপনার কর্মক্ষেত্রকে শক্তিশালী করুন।",
+      "slider": {
+        "title": "পেশাদার টেক অ্যাক্সেসরিজ",
+        "description": "প্রিমিয়াম অ্যাক্সেসরিজ দিয়ে উৎপাদনশীলতা বাড়ান:",
+        "list": [
+          {
+            "title": "মেকানিক্যাল কীবোর্ড এবং এরগোনোমিক মাউস:",
+            "text": "দৈনন্দিন ব্যবহারের জন্য নির্ভুলতা এবং আরাম।"
+          },
+          {
+            "title": "হাই-স্পিড SSD এবং বাহ্যিক স্টোরেজ:",
+            "text": "নিরাপদ এবং দ্রুত ডেটা ব্যবস্থাপনা।"
+          },
+          {
+            "title": "আল্ট্রা এইচডি মনিটর এবং ডকিং স্টেশন:",
+            "text": "মাল্টিটাস্কিং দক্ষতার জন্য অপ্টিমাইজ করা হয়েছে।"
+          }
+        ]
+      }
+    },
+    "networkingAndTech": [
+      {
+        "image": "router_1.jpg",
+        "title": "অ্যাক্সেসরি 1",
+        "description": "পেশাদারদের জন্য উচ্চ-কার্যকারিতা অ্যাক্সেসরি।"
+      },
+      {
+        "image": "docking_station.jpg",
+        "title": "অ্যাক্সেসরি 2",
+        "description": "পেশাদারদের জন্য উচ্চ-কার্যকারিতা অ্যাক্সেসরি।"
+      },
+      {
+        "image": "external_hdd.jpg",
+        "title": "অ্যাক্সেসরি 3",
+        "description": "পেশাদারদের জন্য উচ্চ-কার্যকারিতা অ্যাক্সেসরি।"
+      }
+    ]
   }
 }
