--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -800,5 +800,46 @@
     ],
     "descriptionTitle": "الوصف",
     "viewPortfolio": "عرض الملف الشخصي"
+  },
+  "hardwareProducts": {
+    "premiumTech": {
+      "title": "ملحقات تقنية فاخرة",
+      "description": "عزز مساحة عملك بملحقات تقنية عالية الجودة من الدرجة الاحترافية.",
+      "slider": {
+        "title": "ملحقات تقنية احترافية",
+        "description": "عزز الإنتاجية بملحقات فاخرة:",
+        "list": [
+          {
+            "title": "لوحات مفاتيح ميكانيكية وفئران مريحة:",
+            "text": "دقة وراحة للاستخدام اليومي."
+          },
+          {
+            "title": "محركات أقراص SSD عالية السرعة وتخزين خارجي:",
+            "text": "إدارة بيانات آمنة وسريعة."
+          },
+          {
+            "title": "شاشات فائقة الدقة ومحطات إرساء:",
+            "text": "محسّنة لكفاءة المهام المتعددة."
+          }
+        ]
+      }
+    },
+    "networkingAndTech": [
+      {
+        "image": "router_1.jpg",
+        "title": "ملحق 1",
+        "description": "ملحق عالي الأداء للمحترفين."
+      },
+      {
+        "image": "docking_station.jpg",
+        "title": "ملحق 2",
+        "description": "ملحق عالي الأداء للمحترفين."
+      },
+      {
+        "image": "external_hdd.jpg",
+        "title": "ملحق 3",
+        "description": "ملحق عالي الأداء للمحترفين."
+      }
+    ]
   }
 }
