--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -1,4 +1,45 @@
 {
+  "navbar": {
+    "home": "الرئيسية",
+    "about": "من نحن",
+    "team": "فريقنا التنفيذي",
+    "services": "الخدمات",
+    "contact": "اتصل بنا",
+    "blogs": "المدونات",
+    "privacy": "سياسة الخصوصية",
+    "bestSelling": "الأكثر مبيعًا",
+    "exploreServices": "اكتشف خدماتنا الأعلى تصنيفًا المصممة لتلبية احتياجاتك.",
+    "development": "التطوير",
+    "regularServices": "الخدمات العادية",
+    "otherServices": "خدمات أخرى",
+    "bigdata": "تحليل البيانات الكبيرة وتصميم لوحة المعلومات",
+    "webdev": "تطوير الويب",
+    "iosdev": "تطوير تطبيقات iOS",
+    "mobiledev": "تطوير تطبيقات الهاتف المحمول",
+    "payment": "تكامل بوابة الدفع",
+    "quickbooks": "تكامل كويك بوكس",
+    "zoho": "تكامل زوهو",
+    "technologies": "التقنيات",
+    "ourTechnologies": "تقنياتنا",
+    "exploreTechnologies": "اكتشف أحدث التقنيات المتقدمة لدينا.",
+    "other": "أخرى",
+    "frontend": "تقنية الواجهة الأمامية",
+    "backend": "تقنية الواجهة الخلفية",
+    "products": "المنتجات",
+    "ourProducts": "منتجاتنا",
+    "exploreProducts": "اكتشف منتجاتنا الأعلى تصنيفًا المصممة لتلبية احتياجاتك.",
+    "otherProducts": "منتجات أخرى",
+    "govt": "حكومي",
+    "seo": "وكالات تحسين محركات البحث",
+    "financial": "المؤسسات المالية",
+    "corporate": "حلول الشركات",
+    "ecommerce": "التجارة الإلكترونية",
+    "hardware": "منتجات الأجهزة",
+    "drones": "الطائرات بدون طيار",
+    "career": "وظائف",
+    "language": "اللغة"
+  },
+
   "home": {
     "hero": {
       "title": "طيور عدن",
