--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -1,4 +1,45 @@
 {
+  "navbar": {
+    "home": "হোম",
+    "about": "আমাদের সম্পর্কে",
+    "team": "আমাদের নির্বাহী দল",
+    "services": "পরিষেবাসমূহ",
+    "contact": "যোগাযোগ করুন",
+    "blogs": "ব্লগ",
+    "privacy": "গোপনীয়তা নীতি",
+    "bestSelling": "শ্রেষ্ঠ বিক্রয়",
+    "exploreServices": "আমাদের শীর্ষ রেটেড পরিষেবা আবিষ্কার করুন যা আপনার চাহিদা পূরণ করতে পারে।",
+    "development": "ডেভেলপমেন্ট",
+    "regularServices": "নিয়মিত পরিষেবা",
+    "otherServices": "অন্যান্য পরিষেবা",
+    "bigdata": "বিগ ডাটা বিশ্লেষণ এবং ড্যাশবোর্ড ডিজাইন",
+    "webdev": "ওয়েব ডেভেলপমেন্ট",
+    "iosdev": "iOS অ্যাপ ডেভেলপমেন্ট",
+    "mobiledev": "মোবাইল অ্যাপ ডেভেলপমেন্ট",
+    "payment": "পেমেন্ট গেটওয়ে ইন্টিগ্রেশন",
+    "quickbooks": "কুইকবুকস ইন্টিগ্রেশন",
+    "zoho": "জোহো ইন্টিগ্রেশন",
+    "technologies": "প্রযুক্তি",
+    "ourTechnologies": "আমাদের প্রযুক্তি",
+    "exploreTechnologies": "আমাদের সর্বশেষ এবং উন্নত প্রযুক্তি আবিষ্কার করুন।",
+    "other": "অন্যান্য",
+    "frontend": "ফ্রন্টএন্ড প্রযুক্তি",
+    "backend": "ব্যাকএন্ড প্রযুক্তি",
+    "products": "পণ্যসমূহ",
+    "ourProducts": "আমাদের পণ্যসমূহ",
+    "exploreProducts": "আমাদের শীর্ষ রেটেড পণ্য আবিষ্কার করুন যা আপনার চাহিদা পূরণ করতে পারে।",
+    "otherProducts": "অন্যান্য পণ্য",
+    "govt": "সরকারি",
+    "seo": "SEO এজেন্সি",
+    "financial": "আর্থিক প্রতিষ্ঠান",
+    "corporate": "কর্পোরেট সমাধান",
+    "ecommerce": "ই-কমার্স",
+    "hardware": "হার্ডওয়্যার পণ্য",
+    "drones": "ড্রোন",
+    "career": "ক্যারিয়ার",
+    "language": "ভাষা"
+  },
+
   "home": {
     "hero": {
       "title": "এডেনের পাখিরা",
