--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,4 +1,45 @@
 {
+  "navbar": {
+    "home": "Home",
+    "about": "About Us",
+    "team": "Meet Our Executive Team",
+    "services": "Services",
+    "contact": "Contact",
+    "blogs": "Blogs",
+    "privacy": "Privacy Policy",
+    "bestSelling": "Best Selling",
+    "exploreServices": "Explore our top-rated services tailored to meet your needs.",
+    "development": "Development",
+    "regularServices": "Regular Services",
+    "otherServices": "Other Services",
+    "bigdata": "Big Data Analysis & Dashboard Design",
+    "webdev": "Web Development",
+    "iosdev": "iOS App Development",
+    "mobiledev": "Mobile App Development",
+    "payment": "Payment Gateway Integration",
+    "quickbooks": "QuickBooks Integration",
+    "zoho": "Zoho Integration",
+    "technologies": "Technologies",
+    "ourTechnologies": "Our Technologies",
+    "exploreTechnologies": "Explore our latest and advanced technologies.",
+    "other": "Other",
+    "frontend": "Frontend Technology",
+    "backend": "Backend Technology",
+    "products": "Products",
+    "ourProducts": "Our Products",
+    "exploreProducts": "Explore our top-rated products tailored to meet your needs.",
+    "otherProducts": "Other Products",
+    "govt": "Government",
+    "seo": "SEO Agencies",
+    "financial": "Financial Institutions",
+    "corporate": "Corporate Solutions",
+    "ecommerce": "E-Commerce",
+    "hardware": "Hardware Products",
+    "drones": "Drones",
+    "career": "Career",
+    "language": "Language"
+  },
+
   "home": {
     "hero": {
       "title": "BIRDS OF EDEN",
