--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -1,4 +1,45 @@
 {
+  "navbar": {
+    "home": "ホーム",
+    "about": "私たちについて",
+    "team": "役員チーム",
+    "services": "サービス",
+    "contact": "お問い合わせ",
+    "blogs": "ブログ",
+    "privacy": "プライバシーポリシー",
+    "bestSelling": "ベストセラー",
+    "exploreServices": "お客様のニーズに合わせた高評価のサービスをご覧ください。",
+    "development": "開発",
+    "regularServices": "通常のサービス",
+    "otherServices": "その他のサービス",
+    "bigdata": "ビッグデータ分析＆ダッシュボード設計",
+    "webdev": "ウェブ開発",
+    "iosdev": "iOSアプリ開発",
+    "mobiledev": "モバイルアプリ開発",
+    "payment": "決済ゲートウェイ統合",
+    "quickbooks": "QuickBooks統合",
+    "zoho": "Zoho統合",
+    "technologies": "技術",
+    "ourTechnologies": "私たちの技術",
+    "exploreTechnologies": "最新の先進技術を探索してください。",
+    "other": "その他",
+    "frontend": "フロントエンド技術",
+    "backend": "バックエンド技術",
+    "products": "製品",
+    "ourProducts": "私たちの製品",
+    "exploreProducts": "お客様のニーズに合わせた高評価の製品をご覧ください。",
+    "otherProducts": "その他の製品",
+    "govt": "政府",
+    "seo": "SEOエージェンシー",
+    "financial": "金融機関",
+    "corporate": "企業向けソリューション",
+    "ecommerce": "Eコマース",
+    "hardware": "ハードウェア製品",
+    "drones": "ドローン",
+    "career": "キャリア",
+    "language": "言語"
+  },
+
   "home": {
     "hero": {
       "title": "エデンの鳥",
