--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -881,5 +881,14 @@
         "description": "পেশাদারদের জন্য উচ্চ-কার্যকারিতা অ্যাক্সেসরি।"
       }
     ]
+  },
+  "footer": {
+    "companyDescription": "BIRDS OF EDEN একটি অগ্রণী সফটওয়্যার কোম্পানি যা নতুন ধারণাগুলিকে বাস্তবে রূপান্তর করতে প্রতিশ্রুতিবদ্ধ।",
+    "importantLinks": "গুরুত্বপূর্ণ লিঙ্কসমূহ",
+    "links": "লিঙ্কসমূহ",
+    "socialLinks": "সামাজিক লিঙ্ক",
+    "newsletter": "আমাদের নিউজলেটারে সদস্যতা নিন",
+    "emailPlaceholder": "আপনার ইমেল লিখুন",
+    "copyright": "© কপিরাইট"
   }
 }
