drone page updated

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -128,6 +128,8 @@
         "range": "النطاق",
         "camera": "الكاميرا"
       },
+      "droneCollection": "اكتشف مجموعتنا المتميزة من الطائرات بدون طيار",
+      "droneTagline": "تقنية متطورة للمستكشفين الجويين",
       "drones": [
         {
           "id": 1,
