--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -129,6 +129,8 @@
         "range": "পরিসীমা",
         "camera": "ক্যামেরা"
       },
+      "droneCollection": "আমাদের প্রিমিয়াম ড্রোন সংগ্রহ আবিষ্কার করুন",
+      "droneTagline": "আকাশ অনুসন্ধানকারীদের জন্য অত্যাধুনিক প্রযুক্তি",
       "drones": [
         {
           "id": 1,
