--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -129,6 +129,8 @@
         "range": "Range",
         "camera": "Camera"
       },
+      "droneCollection": "Discover Our Premium Drone Collection",
+      "droneTagline": "Cutting-edge technology for the sky explorers",
       "drones": [
         {
           "id": 1,
