--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -884,6 +884,20 @@
       }
     ]
   },
+  "contact": {
+    "contactUs": "যোগাযোগ করুন",
+    "name": "নাম",
+    "namePlaceholder": "আপনার নাম লিখুন",
+    "email": "ইমেইল",
+    "emailPlaceholder": "আপনার ইমেইল লিখুন",
+    "message": "বার্তা",
+    "messagePlaceholder": "আপনার বার্তা লিখুন",
+    "sendMessage": "বার্তা পাঠান",
+    "ourLocation": "আমাদের অবস্থান",
+    "successMessage": "বার্তা সফলভাবে পাঠানো হয়েছে!",
+    "errorMessage": "বার্তা পাঠানোর সময় একটি ত্রুটি ঘটেছে!",
+    "errorAlert": "বার্তা পাঠাতে ব্যর্থ হয়েছে।"
+  },
   "footer": {
     "companyDescription": "BIRDS OF EDEN একটি অগ্রণী সফটওয়্যার কোম্পানি যা নতুন ধারণাগুলিকে বাস্তবে রূপান্তর করতে প্রতিশ্রুতিবদ্ধ।",
     "importantLinks": "গুরুত্বপূর্ণ লিঙ্কসমূহ",
