--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -42,7 +42,7 @@
 
   "home": {
     "hero": {
-      "title": "এডেনের পাখিরা",
+      "title": "BIRDS OF EDEN",
       "typewriter": [
         "ইআরপি সফটওয়্যার সমাধান এবং এআই-এর ভবিষ্যত উদ্ভাবন",
         "ব্যবসায়িক অটোমেশন বিপ্লবী",
