added chinese language support, update language selector

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -697,22 +697,22 @@
     "backendTechnologies": "تقنيات الواجهة الخلفية",
     "technologies": {
       "frontend": {
-        "React.js": "مكتبة JavaScript لبناء واجهات المستخدم.",
-        "Vue.js": "إطار عمل JavaScript التدريجي.",
-        "Angular": "إطار عمل واحد. للجوال وسطح المكتب.",
-        "Next.js": "إطار عمل React للإنتاج.",
-        "MUI": "إطار عمل لمطوري الويب الطموحين.",
-        "Chakra UI": "يعطي بنية لتطبيقات الويب من خلال توفير نماذج مع ربط المفتاح والقيمة.",
-        "Streamlit": "إطار عمل لإنشاء تطبيقات البيانات بلغة Python الخالصة."
+        "reactJs": "مكتبة JavaScript لبناء واجهات المستخدم.",
+        "vueJs": "إطار عمل JavaScript التدريجي.",
+        "angular": "إطار عمل واحد. للجوال وسطح المكتب.",
+        "nextJs": "إطار عمل React للإنتاج.",
+        "mui": "إطار عمل لمطوري الويب الطموحين.",
+        "chakraUi": "يعطي بنية لتطبيقات الويب من خلال توفير نماذج مع ربط المفتاح والقيمة.",
+        "streamlit": "إطار عمل لإنشاء تطبيقات البيانات بلغة Python الخالصة."
       },
       "backend": {
-        "Node.js": "بيئة تشغيل JavaScript مبنية على محرك V8 من Chrome.",
-        "Django": "إطار عمل ويب Python عالي المستوى يشجع على التطوير السريع.",
-        "Spring Boot": "إطار عمل يبسط تطوير التطبيقات المستندة إلى Java.",
-        "Python": "لغة برمجة متعددة الاستخدامات وعالية المستوى معروفة ببساطتها.",
-        "Go": "لغة برمجة مجمعة ذات كتابة ثابتة تم تصميمها في Google.",
-        "Rust": "لغة برمجة نظام تعمل بسرعة فائقة وتمنع أخطاء التجزئة وتضمن أمان سلاسل العمليات.",
-        "Laravel": "إطار عمل PHP لفنانين الويب، يوفر صياغة أنيقة وأدوات قوية."
+        "nodeJs": "بيئة تشغيل JavaScript مبنية على محرك V8 من Chrome.",
+        "django": "إطار عمل ويب Python عالي المستوى يشجع على التطوير السريع.",
+        "springBoot": "إطار عمل يبسط تطوير التطبيقات المستندة إلى Java.",
+        "python": "لغة برمجة متعددة الاستخدامات وعالية المستوى معروفة ببساطتها.",
+        "go": "لغة برمجة مجمعة ذات كتابة ثابتة تم تصميمها في Google.",
+        "rust": "لغة برمجة نظام تعمل بسرعة فائقة وتمنع أخطاء التجزئة وتضمن أمان سلاسل العمليات.",
+        "laravel": "إطار عمل PHP لفنانين الويب، يوفر صياغة أنيقة وأدوات قوية."
       }
     }
   },
