--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -696,22 +696,22 @@
     "backendTechnologies": "ব্যাকএন্ড প্রযুক্তি",
     "technologies": {
       "frontend": {
-        "React.js": "ইউজার ইন্টারফেস তৈরির জন্য একটি জাভাস্ক্রিপ্ট লাইব্রেরি।",
-        "Vue.js": "প্রগতিশীল জাভাস্ক্রিপ্ট ফ্রেমওয়ার্ক।",
-        "Angular": "একটি ফ্রেমওয়ার্ক। মোবাইল এবং ডেস্কটপ।",
-        "Next.js": "উৎপাদনের জন্য একটি React ফ্রেমওয়ার্ক।",
-        "MUI": "উচ্চাভিলাষী ওয়েব ডেভেলপারদের জন্য একটি ফ্রেমওয়ার্ক।",
-        "Chakra UI": "কী-মান বাইন্ডিং সহ মডেল সরবরাহ করে ওয়েব অ্যাপ্লিকেশনগুলিকে কাঠামো দেয়।",
-        "Streamlit": "বিশুদ্ধ পাইথনে ডেটা অ্যাপ্লিকেশন তৈরির জন্য একটি ফ্রেমওয়ার্ক।"
+        "reactJs": "ইউজার ইন্টারফেস তৈরির জন্য একটি জাভাস্ক্রিপ্ট লাইব্রেরি।",
+        "vueJs": "প্রগতিশীল জাভাস্ক্রিপ্ট ফ্রেমওয়ার্ক।",
+        "angular": "একটি ফ্রেমওয়ার্ক। মোবাইল এবং ডেস্কটপ।",
+        "nextJs": "উৎপাদনের জন্য একটি React ফ্রেমওয়ার্ক।",
+        "mui": "উচ্চাভিলাষী ওয়েব ডেভেলপারদের জন্য একটি ফ্রেমওয়ার্ক।",
+        "chakraUi": "কী-মান বাইন্ডিং সহ মডেল সরবরাহ করে ওয়েব অ্যাপ্লিকেশনগুলিকে কাঠামো দেয়।",
+        "streamlit": "বিশুদ্ধ পাইথনে ডেটা অ্যাপ্লিকেশন তৈরির জন্য একটি ফ্রেমওয়ার্ক।"
       },
       "backend": {
-        "Node.js": "Chrome এর V8 ইঞ্জিনে তৈরি একটি জাভাস্ক্রিপ্ট রানটাইম।",
-        "Django": "একটি উচ্চ-স্তরের পাইথন ওয়েব ফ্রেমওয়ার্ক যা দ্রুত বিকাশকে উৎসাহিত করে।",
-        "Spring Boot": "একটি ফ্রেমওয়ার্ক যা জাভা-ভিত্তিক অ্যাপ্লিকেশনগুলির বিকাশকে সহজ করে।",
-        "Python": "একটি বহুমুখী, উচ্চ-স্তরের প্রোগ্রামিং ভাষা যা সরলতার জন্য পরিচিত।",
-        "Go": "Google-এ ডিজাইন করা একটি স্ট্যাটিক্যালি টাইপ করা, কম্পাইল্ড প্রোগ্রামিং ভাষা।",
-        "Rust": "একটি সিস্টেম প্রোগ্রামিং ভাষা যা অবিশ্বাস্যভাবে দ্রুত চলে, সেগফল্টগুলিকে প্রতিরোধ করে এবং থ্রেড সুরক্ষা নিশ্চিত করে।",
-        "Laravel": "ওয়েব কারিগরদের জন্য একটি PHP ফ্রেমওয়ার্ক, যা মার্জিত সিনট্যাক্স এবং শক্তিশালী সরঞ্জাম সরবরাহ করে।"
+        "nodeJs": "Chrome এর V8 ইঞ্জিনে তৈরি একটি জাভাস্ক্রিপ্ট রানটাইম।",
+        "django": "একটি উচ্চ-স্তরের পাইথন ওয়েব ফ্রেমওয়ার্ক যা দ্রুত বিকাশকে উৎসাহিত করে।",
+        "springBoot": "একটি ফ্রেমওয়ার্ক যা জাভা-ভিত্তিক অ্যাপ্লিকেশনগুলির বিকাশকে সহজ করে।",
+        "python": "একটি বহুমুখী, উচ্চ-স্তরের প্রোগ্রামিং ভাষা যা সরলতার জন্য পরিচিত।",
+        "go": "Google-এ ডিজাইন করা একটি স্ট্যাটিক্যালি টাইপ করা, কম্পাইল্ড প্রোগ্রামিং ভাষা।",
+        "rust": "একটি সিস্টেম প্রোগ্রামিং ভাষা যা অবিশ্বাস্যভাবে দ্রুত চলে, সেগফল্টগুলিকে প্রতিরোধ করে এবং থ্রেড সুরক্ষা নিশ্চিত করে।",
+        "laravel": "ওয়েব কারিগরদের জন্য একটি PHP ফ্রেমওয়ার্ক, যা মার্জিত সিনট্যাক্স এবং শক্তিশালী সরঞ্জাম সরবরাহ করে।"
       }
     }
   },
