--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -687,22 +687,22 @@
     "backendTechnologies": "バックエンドテクノロジー",
     "technologies": {
       "frontend": {
-        "React.js": "ユーザーインターフェイスを構築するためのJavaScriptライブラリです。",
-        "Vue.js": "プログレッシブJavaScriptフレームワーク。",
-        "Angular": "1つのフレームワーク。モバイルとデスクトップに対応。",
-        "Next.js": "本番環境向けのReactフレームワーク。",
-        "MUI": "意欲的なWeb開発者向けのフレームワーク。",
-        "Chakra UI": "キーと値のバインディングを備えたモデルを提供することにより、Webアプリケーションに構造を提供します。",
-        "Streamlit": "純粋なPythonでデータアプリを作成するためのフレームワーク。"
+        "reactJs": "ユーザーインターフェイスを構築するためのJavaScriptライブラリです。",
+        "vueJs": "プログレッシブJavaScriptフレームワーク。",
+        "angular": "1つのフレームワーク。モバイルとデスクトップに対応。",
+        "nextJs": "本番環境向けのReactフレームワーク。",
+        "mui": "意欲的なWeb開発者向けのフレームワーク。",
+        "chakraUi": "キーと値のバインディングを備えたモデルを提供することにより、Webアプリケーションに構造を提供します。",
+        "streamlit": "純粋なPythonでデータアプリを作成するためのフレームワーク。"
       },
       "backend": {
-        "Node.js": "ChromeのV8エンジン上に構築されたJavaScriptランタイム。",
-        "Django": "迅速な開発を促進する高レベルのPython Webフレームワーク。",
-        "Spring Boot": "Javaベースのアプリケーションの開発を簡素化するフレームワーク。",
-        "Python": "シンプルさで知られる、用途の広い高レベルのプログラミング言語。",
-        "Go": "Googleで設計された、静的に型付けされたコンパイル済みプログラミング言語。",
-        "Rust": "非常に高速に動作し、セグメンテーションフォールトを防ぎ、スレッドセーフを保証するシステムプログラミング言語。",
-        "Laravel": "エレガントな構文と堅牢なツールを提供する、Web職人向けのPHPフレームワーク。"
+        "nodeJs": "ChromeのV8エンジン上に構築されたJavaScriptランタイム。",
+        "django": "迅速な開発を促進する高レベルのPython Webフレームワーク。",
+        "springBoot": "Javaベースのアプリケーションの開発を簡素化するフレームワーク。",
+        "python": "シンプルさで知られる、用途の広い高レベルのプログラミング言語。",
+        "go": "Googleで設計された、静的に型付けされたコンパイル済みプログラミング言語。",
+        "rust": "非常に高速に動作し、セグメンテーションフォールトを防ぎ、スレッドセーフを保証するシステムプログラミング言語。",
+        "laravel": "エレガントな構文と堅牢なツールを提供する、Web職人向けのPHPフレームワーク。"
       }
     }
   },
