--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -477,24 +477,28 @@
         "text": "LLMベースのソリューションによる日常業務の最適化 - ルーチン業務をサポートするためにLLMベースのソリューションを実装することにより、日常の運用コストを削減します。これは、ボタンがクリックされたときに表示されるカードの追加テキストです。"
       }
     ],
-    "ourServices": [
-      {
-        "image": "webdev.jpg",
-        "title": "ウェブ開発",
-        "description": "お客様のビジネスニーズに合わせた、モダンでレスポンシブ、かつユーザーフレンドリーなウェブサイトの作成を専門としています。"
-      },
-      {
-        "image": "mobiledev.jpg",
-        "title": "モバイルアプリ開発",
-        "description": "ユーザーを惹きつけ、ブランドを向上させる強力なモバイルアプリケーションで、あなたのアイデアを形にします。"
-      },
-      {
-        "image": "uiux.jpg",
-        "title": "UI/UXデザイン",
-        "description": "聴衆を魅了し、ユーザーエクスペリエンスを高める、視覚的に魅力的で直感的なインターフェースを作成します。"
-      }
-    ],
+    "ourServices": {
+      "title": "定期サービス",
+      "services": [
+        {
+          "image": "webdev.jpg",
+          "title": "ウェブ開発",
+          "description": "お客様のビジネスニーズに合わせて、最新のレスポンシブでユーザーフレンドリーなウェブサイトを作成することを専門としています。"
+        },
+        {
+          "image": "mobiledev.jpg",
+          "title": "モバイルアプリ開発",
+          "description": "あなたのアイデアを、ユーザーを惹きつけ、ブランドを強化する強力なモバイルアプリケーションに変えましょう。"
+        },
+        {
+          "image": "uiux.jpg",
+          "title": "UI / UXデザイン",
+          "description": "視聴者を魅了し、ユーザーエクスペリエンスを高める、視覚的に魅力的で直感的なインターフェースを作成します。"
+        }
+      ]
+    },
     "webDev": {
+      "title": "ウェブ開発サービス",
       "header": "BIRDS OF EDENは、オンライン目標の達成とデジタルプレゼンスの向上を支援するために、ダイナミックでユーザーフレンドリーなウェブサイトの構築を専門としています。",
       "list": [
         {
